# b2broker-test-assignment

./: .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yml  pyproject.toml  pytest.ini
app/: models.py  serializers.py  views.py
app/migrations/: 0001_initial.py  0002_alter_transaction_amount_alter_transaction_txid_and_more.py
config/: settings.py  urls.py
tests/: test_integration.py
